--- a/index.html
+++ b/index.html
@@ -20,9 +20,19 @@ body {
     flex-direction: column;
 }
 
-main { flex: 1; text-align: center; padding: 40px 20px; }
+main { 
+    flex: 1; 
+    text-align: center; 
+    padding: 20px 20px 40px 20px; /* reduce top padding from 40px -> 20px */
+}
 
-h1 { color: white; font-size: 2.5rem; margin-top: 0px; }
+h1 { 
+    color: white; 
+    font-size: 2.5rem; 
+    margin: 0; /* remove top margin */
+    padding-top: 0; /* ensure no padding */
+}
+
 
 /* NAME BOX */
 .name-box {
@@ -33,6 +43,7 @@ h1 { color: white; font-size: 2.5rem; margin-top: 0px; }
     overflow: hidden;
     background: rgba(255,255,255,0.05);
     box-shadow: 0 15px 35px rgba(0,0,0,0.5);
+    transition: transform 0.3s ease;
 }
 
 .name-text {
@@ -80,18 +91,6 @@ h1 { color: white; font-size: 2.5rem; margin-top: 0px; }
 }
 .button-35:hover { transform: scale(1.1); background: linear-gradient(45deg,#f9a825,#f57f17); }
 
-footer {
-    background: #333;
-    color: white;
-    padding: 15px;
-    text-align: center;
-}
-
-@media(max-width:768px){
-    .name-text { font-size: 1.6rem; }
-    .name-box { padding: 30px 20px; }
-}
-
 /* Profile Picture Section */
 .profile-wrapper { display: flex; justify-content: center; margin:30px 0; }
 .profile-ring {
@@ -130,31 +129,17 @@ footer {
     flex-wrap: wrap;
 }
 .animation {
-    height: 3.5rem;
-    overflow: hidden;
-}
-/* Animation fix */
-.animation {
     height: 3rem;
     overflow: hidden;
 }
-/* Slider container */
 .slider {
     display: flex;
     flex-direction: column;
     animation: slideText 9s infinite;
 }
-
-/* Each word box */
-.slider {
-    display: flex;
-    flex-direction: column;
-    animation: slideText 9s infinite;
-}
-
 .slider > div {
-    height: 3rem; /* make sure each word has exact height */
-    line-height: 3rem; /* vertically center */
+    height: 3rem;
+    line-height: 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -164,16 +149,34 @@ footer {
     font-weight: bold;
     text-transform: capitalize;
 }
-
 .first { background-color: #0060A3; height:12px;}
 .second { background-color: green; height:12px;}
 .third { background-color: #FF5100; height:12px;}
-
 @keyframes slideText {
-    0%,20%   { transform: translateY(0); }      /* Kaustubh visible */
-    25%,45%  { transform: translateY(-3rem); } /* Computer Engineer visible */
-    50%,70%  { transform: translateY(-6rem); } /* Maharashtrian visible */
-    75%,100% { transform: translateY(0); }     /* Loop back */
+    0%,20%   { transform: translateY(0); }      
+    25%,45%  { transform: translateY(-3rem); } 
+    50%,70%  { transform: translateY(-6rem); } 
+    75%,100% { transform: translateY(0); }     
+}
+
+/* Visitor Counter */
+#visitor-count {
+    margin-top: 30px;
+    font-size: 1.5rem;
+    color: #FFD000;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+}
+
+/* Footer */
+footer {
+    background: #333;
+    color: white;
+    padding: 15px;
+    text-align: center;
 }
 
 </style>
@@ -198,26 +201,30 @@ footer {
     </div>
 
     <!-- Animated Identity -->
-    <!-- Animated Identity -->
-<div class="container1">
-    <p>Hello 👋 I'm</p>
-    <section class="animation">
-        <div class="slider">
-            <div class="first">Kaustubh</div>
-            <div class="second">Computer Engineer</div>
-            <div class="third">Maharashtrian</div>
-        </div>
-    </section>
-</div>
-
+    <div class="container1">
+        <p>Hello 👋 I'm</p>
+        <section class="animation">
+            <div class="slider">
+                <div class="first">Kaustubh</div>
+                <div class="second">Computer Engineer</div>
+                <div class="third">Maharashtrian</div>
+            </div>
+        </section>
+    </div>
 
     <!-- Buttons -->
     <div class="links">
         <button class="button-35" onclick="location.href='about.html'">About Me</button>
-        <button class="button-35" onclick="location.href='projects.html'">Projects</button>
-        <button class="button-35" onclick="location.href='contact.html'">Social Media</button>
+        <button class="button-35" onclick="location.href='projects.html'">Project</button>
+        <button class="button-35" onclick="location.href='contact.html'">Media</button>
         <button class="button-35" onclick="location.href='articles/Column.html'">My Column</button>
     </div>
+
+    <!-- Visitor Counter -->
+    <div id="visitor-count">
+        👁 Visitors: <span id="visitor-num">...</span>
+    </div>
+
 </main>
 
 <footer>
@@ -228,6 +235,14 @@ footer {
 const box = document.querySelector('.name-box');
 box.addEventListener('mouseenter', ()=>{ box.style.transform='scale(1.03)'; });
 box.addEventListener('mouseleave', ()=>{ box.style.transform='scale(1)'; });
+
+// Visitor counter using CountAPI
+fetch('https://api.countapi.xyz/hit/kaustubh77rm.github.io/visits')
+  .then(res => res.json())
+  .then(data => {
+    document.getElementById('visitor-num').innerText = data.value;
+  })
+  .catch(err => console.log(err));
 </script>
 </body>
 </html>
