--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@ body {
     flex-direction: column;
 }
 
+/* MAIN CONTAINER */
 main { 
     flex: 1; 
+    min-height: 0; /* allows flexbox to shrink properly */
     text-align: center; 
-    padding: 20px 20px 40px 20px; /* reduce top padding from 40px -> 20px */
+    padding: 20px 20px 40px 20px; /* reduced top padding */
 }
 
+/* PAGE HEADING */
 h1 { 
     color: white; 
     font-size: 2.5rem; 
-    margin: 0; /* remove top margin */
-    padding-top: 0; /* ensure no padding */
+    margin: 0; 
 }
-
 
 /* NAME BOX */
 .name-box {
@@ -76,21 +77,6 @@ h1 {
 
 @keyframes rotate { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
 
-/* LINKS */
-.links { margin-top: 7px; }
-.button-35 {
-    background: #FFD000;
-    border: none;
-    padding: 12px 30px;
-    margin: 10px;
-    font-size: 24px;
-    font-weight: bold;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: 0.3s;
-}
-.button-35:hover { transform: scale(1.1); background: linear-gradient(45deg,#f9a825,#f57f17); }
-
 /* Profile Picture Section */
 .profile-wrapper { display: flex; justify-content: center; margin:30px 0; }
 .profile-ring {
@@ -114,7 +100,6 @@ h1 {
     pointer-events: none;
 }
 .profile-ring:hover { transform: scale(1.08); box-shadow: 0 0 40px rgba(255,140,0,0.9); }
-@media(max-width:600px){ .profile-ring { width:130px; height:130px; } }
 
 /* Animated Identity Section */
 .container1 {
@@ -128,10 +113,7 @@ h1 {
     gap: 10px;
     flex-wrap: wrap;
 }
-.animation {
-    height: 3rem;
-    overflow: hidden;
-}
+.animation { height: 3rem; overflow: hidden; }
 .slider {
     display: flex;
     flex-direction: column;
@@ -159,19 +141,39 @@ h1 {
     75%,100% { transform: translateY(0); }     
 }
 
-/* Visitor Counter */
-#visitor-count {
-    margin-top: 30px;
-    font-size: 1.5rem;
-    color: #FFD000;
-    font-weight: 700;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
+/* BUTTONS */
+.links {
+    margin-top: 20px;
+}
+.button-35 {
+    background: #FFD000;
+    border: none;
+    padding: 12px 30px;
+    margin: 10px;
+    font-size: 24px;
+    font-weight: bold;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.button-35:hover { 
+    transform: scale(1.1); 
+    background: linear-gradient(45deg,#f9a825,#f57f17); 
 }
 
-/* Footer */
+/* VISITOR COUNTER */
+#visitor-count { 
+    margin-top: 20px; 
+    font-size: 1.5rem; 
+    color: #FFD000; 
+    font-weight: 700; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    gap: 8px; 
+}
+
+/* FOOTER */
 footer {
     background: #333;
     color: white;
@@ -179,6 +181,13 @@ footer {
     text-align: center;
 }
 
+/* RESPONSIVE */
+@media(max-width:768px){
+    .name-text { font-size: 1.6rem; }
+    .name-box { padding: 30px 20px; }
+    .profile-ring { width:130px; height:130px; }
+    .button-35 { font-size: 18px; padding: 10px 20px; }
+}
 </style>
 </head>
 
@@ -193,11 +202,10 @@ footer {
         </div>
     </div>
 
+    <!-- Name Box -->
     <div class="name-box">
         <div class="circle-border"></div>
-        <div class="name-text">
-            KAUSTUBH VARSHA PRABHAKAR RAMTEKE
-        </div>
+        <div class="name-text">KAUSTUBH VARSHA PRABHAKAR RAMTEKE</div>
     </div>
 
     <!-- Animated Identity -->
@@ -212,10 +220,10 @@ footer {
         </section>
     </div>
 
-    <!-- Buttons -->
+    <!-- Navigation Buttons -->
     <div class="links">
         <button class="button-35" onclick="location.href='about.html'">About Me</button>
-        <button class="button-35" onclick="location.href='projects.html'">Project</button>
+        <button class="button-35" onclick="location.href='projects.html'">Projects</button>
         <button class="button-35" onclick="location.href='contact.html'">Media</button>
         <button class="button-35" onclick="location.href='articles/Column.html'">My Column</button>
     </div>
@@ -224,11 +232,10 @@ footer {
     <div id="visitor-count">
         👁 Visitors: <span id="visitor-num">...</span>
     </div>
-
 </main>
 
 <footer>
-    © 2024 Kaustubh Ramteke | All Rights Reserved
+    © 2026 Kaustubh Ramteke | All Rights Reserved
 </footer>
 
 <script>
@@ -237,12 +244,15 @@ box.addEventListener('mouseenter', ()=>{ box.style.transform='scale(1.03)'; });
 box.addEventListener('mouseleave', ()=>{ box.style.transform='scale(1)'; });
 
 // Visitor counter using CountAPI
-fetch('https://api.countapi.xyz/hit/kaustubh77rm.github.io/visits')
+fetch('https://api.countapi.xyz/hit/kaustubh77rm-website/visits')
   .then(res => res.json())
   .then(data => {
     document.getElementById('visitor-num').innerText = data.value;
   })
-  .catch(err => console.log(err));
+  .catch(err => {
+    console.log(err);
+    document.getElementById('visitor-num').innerText = "";
+  });
 </script>
 </body>
 </html>
