--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ footer {
 
 <body>
 <main>
-    <h1>Welcome to My Kingdom</h1>
+    <h1>Welcome to My Kingdom 🧿</h1>
 
     <!-- Profile Picture -->
     <div class="profile-wrapper">
