--- a/projects.html
+++ b/projects.html
@@ -1,129 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Projects</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>My Projects</title>
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        }
+<style>
+:root {
+    --primary: #2e7d32;
+    --secondary: #006cc6;
+    --bg: #f1f1f1;
+    --card: #ffffff;
+    --text: #333;
+    --muted: #666;
+}
 
-        .container {
-            width: 70%;
-            margin: 20px auto;
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-        }
+/* Base */
+body {
+    margin: 0;
+    font-family: system-ui, Arial, sans-serif;
+    background: var(--bg);
+    color: var(--text);
+}
 
-        .top-bar {
-            display: flex;
-            justify-content: flex-start;
-            margin-bottom: 10px;
-        }
+/* Top bar */
+.top-bar {
+    position: sticky;
+    top: 0;
+    background: var(--card);
+    padding: 12px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    z-index: 100;
+}
 
-        .back-button {
-            padding: 8px 15px;
-            background-color: #4CAF50;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 16px;
-        }
+.back-button {
+    background: var(--primary);
+    color: #fff;
+    padding: 8px 14px;
+    border-radius: 6px;
+    text-decoration: none;
+    font-size: 15px;
+}
 
-        .back-button:hover {
-            background-color: #45a049;
-        }
+/* Container */
+.container {
+    max-width: 1000px;
+    margin: auto;
+    padding: 16px;
+}
 
-        h1 {
-            text-align: center;
-            color: #333;
-            margin-top: 5px;
-        }
+/* Header */
+.header {
+    text-align: center;
+    margin: 24px 0;
+}
 
-        .project {
-            margin-bottom: 30px;
-        }
+.header h1 {
+    margin: 0;
+    font-size: 28px;
+}
 
-        h2 {
-            color: #4CAF50;
-        }
+.subtitle {
+    color: var(--muted);
+    font-size: 16px;
+}
 
-        p {
-            font-size: 18px;
-            color: #555;
-            line-height: 1.6;
-        }
+/* Card */
+.section {
+    background: var(--card);
+    border-radius: 12px;
+    padding: 16px;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+}
 
-        iframe {
-            width: 100%;
-            height: 400px;
-            border-radius: 8px;
-            margin-top: 15px;
-        }
+/* Project */
+.project-title {
+    color: var(--primary);
+    margin-bottom: 10px;
+}
 
-        .footer {
-            text-align: center;
-            margin-top: 30px;
-            color: #777;
-        }
+p {
+    line-height: 1.7;
+    color: var(--muted);
+    font-size: 17px;
+}
 
-        @media (max-width: 600px) {
-            .container {
-                width: 95%;
-                padding: 15px;
-            }
+/* Video */
+iframe {
+    width: 100%;
+    height: 400px;
+    border-radius: 10px;
+    margin-top: 15px;
+    border: none;
+}
 
-            iframe {
-                height: 250px;
-            }
-        }
-    </style>
+/* Footer */
+.footer {
+    text-align: center;
+    font-size: 14px;
+    color: var(--muted);
+    margin: 24px 0;
+}
+
+/* Responsive */
+@media (max-width: 600px) {
+    iframe { height: 250px; }
+    .header h1 { font-size: 24px; }
+}
+</style>
 </head>
 
 <body>
 
-    <div class="container">
+<div class="top-bar">
+    <a href="index.html" class="back-button">←</a>
+</div>
 
-        <!-- Back button on top -->
-        <div class="top-bar">
-            <a href="index.html" class="back-button">← Back</a>
-        </div>
+<div class="container">
 
-        <h1>My Project</h1>
-
-        <div class="project">
-            <h2>Product Sales (E-Commerce)</h2>
-
-            <p>
-                Developed an e-commerce project using Spring Boot and JavaScript for backend
-                development and HTML & CSS for frontend design. The project includes user
-                authentication, role-based access, product management, order processing,
-                and MySQL-based data storage with shopping cart and order tracking features.
-            </p>
-
-            <!-- User-initiated video playback -->
-            <iframe
-                src="https://www.youtube.com/embed/ugK_XPhOVuI"
-                title="E-Commerce Project Demo"
-                frameborder="0"
-                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen>
-            </iframe>
-        </div>
-
-        <div class="footer">
-            © 2026 Costub's Portfolio
-        </div>
-
+    <div class="header">
+        <h1>My Projects</h1>
+        <div class="subtitle">Things I’ve built & worked on</div>
     </div>
+
+    <div class="section">
+        <h2 class="project-title">Product Sales</h2>
+
+        <p>
+            Developed a full-stack e-commerce application using
+            <strong>Java & Spring Boot</strong> for backend,
+            <strong>HTML, CSS & JavaScript</strong> for frontend,
+            and <strong>MySQL</strong> for data storage.
+            Features include authentication, role-based access,
+            product management, shopping cart, order tracking,
+            and secure checkout.
+        </p>
+
+        <iframe
+            src="https://www.youtube.com/embed/ugK_XPhOVuI"
+            title="E-Commerce Project Demo"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
+    </div>
+
+    <div class="footer">
+        © 2026 Kaustubh Ramteke
+    </div>
+
+</div>
 
 </body>
 </html>
