--- a/about.html
+++ b/about.html
@@ -259,6 +259,7 @@ p {
             <span class="skill">HTML</span>
             <span class="skill">CSS</span>
             <span class="skill">Java</span>
+            <span class="skill">Python</span>
             <span class="skill">Spring Boot</span>
             <span class="skill">MySQL</span>
             <span class="skill">DSA</span>
@@ -275,7 +276,7 @@ p {
             <div class="sub-item">
                 <button class="sub-header">BE – Computer Science & Engineering <span>▼</span></button>
                 <div class="sub-content">
-                    <p>Hanuman Vyayam Prasarak Mandal's College of Engineering & Technology, Amravati, Maharashtra, India</p>
+                    <p>Shree Hanuman Vyayam Prasarak Mandal's College of Engineering & Technology, Amravati, Maharashtra, India</p>
                     <p>2023 · CGPA: 8.35</p>
                 </div>
             </div>
@@ -334,8 +335,9 @@ p {
                 <div class="sub-content">
                     <p>Pasoori</p>
                     <p>Roads Untraveled</p>
-                    <p>Melody Club</p>
+                    <p>Fever Fever - Melody Club</p>
                     <p>Mere Mehboob Qayamat Hogi</p>
+                    
                 </div>
             </div>
 
@@ -370,4 +372,5 @@ document.querySelectorAll(".dropdown-header, .sub-header").forEach(btn => {
 
 </body>
 </html>
+
 
