--- a/priyadarshini1/ppn.html
+++ b/priyadarshini1/ppn.html
@@ -1,1 +1,148 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>PPN – Subjects</title>
 
+<style>
+:root {
+    --primary: #2e7d32;
+    --secondary: #006cc6;
+    --bg: #f1f1f1;
+    --card: #ffffff;
+    --text: #333;
+    --muted: #666;
+}
+
+/* Base */
+body {
+    margin: 0;
+    font-family: system-ui, Arial, sans-serif;
+    background: var(--bg);
+    color: var(--text);
+}
+
+/* Top bar */
+.top-bar {
+    position: sticky;
+    top: 0;
+    background: var(--card);
+    padding: 12px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    z-index: 100;
+}
+
+.back-button {
+    background: var(--primary);
+    color: #fff;
+    padding: 8px 14px;
+    border-radius: 6px;
+    text-decoration: none;
+    font-size: 15px;
+}
+
+/* Container */
+.container {
+    max-width: 1000px;
+    margin: auto;
+    padding: 16px;
+}
+
+/* Header */
+.header {
+    text-align: center;
+    margin: 24px 0;
+}
+
+.header h1 {
+    margin: 0;
+    font-size: 28px;
+}
+
+.subtitle {
+    color: var(--muted);
+    font-size: 16px;
+}
+
+/* Grid */
+.subject-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 24px;
+    margin-top: 28px;
+}
+
+/* Card-style button */
+.subject-card {
+    background: var(--card);
+    border-radius: 18px;
+    padding: 32px 20px;
+    box-shadow: 0 6px 14px rgba(0,0,0,0.08);
+    text-align: center;
+    text-decoration: none;
+    transition: transform 0.25s ease, box-shadow 0.25s ease;
+}
+
+.subject-card:hover {
+    transform: translateY(-8px);
+    box-shadow: 0 16px 32px rgba(0,0,0,0.16);
+}
+
+.subject-card h2 {
+    margin: 0;
+    font-size: 22px;
+    color: var(--text);
+}
+
+/* Footer */
+.footer {
+    text-align: center;
+    font-size: 14px;
+    color: var(--muted);
+    margin: 36px 0 16px;
+}
+
+/* Desktop */
+@media (min-width: 768px) {
+    .header h1 { font-size: 32px; }
+    .subtitle { font-size: 18px; }
+}
+</style>
+</head>
+
+<body>
+
+<div class="top-bar">
+    <a href="https://kaustubh77rm.github.io/index.html" class="back-button">←</a>
+</div>
+
+<div class="container">
+
+    <div class="header">
+        <h1>PPN</h1>
+        <div class="subtitle">Select Subject</div>
+    </div>
+
+    <div class="subject-grid">
+
+        <a href="emerging-trends.html" class="subject-card">
+            <h2>Emerging Trends in CS & IT</h2>
+        </a>
+
+        <a href="python.html" class="subject-card">
+            <h2>Python</h2>
+        </a>
+
+        <a href="c.html" class="subject-card">
+            <h2>C Programming</h2>
+        </a>
+
+    </div>
+
+    <div class="footer">© 2026 Kaustubh Ramteke</div>
+
+</div>
+
+</body>
+</html>
