--- a/index.html
+++ b/index.html
@@ -227,7 +227,13 @@ footer {
         <button class="button-35" onclick="location.href='projects.html'">Projects</button>
         <button class="button-35" onclick="location.href='contact.html'">Media</button>
         <button class="button-35" onclick="location.href='articles/Column.html'">My Column</button>
+    <button class="button-35" onclick="location.href='priyadarshini1/ppn.html'">
+        Priyadarshini
+    </button>
     </div>
+
+  
+
 
 </main>
 
