--- a/priyadarshini1/ppn.html
+++ b/priyadarshini1/ppn.html
@@ -120,8 +120,7 @@ body {
 <div class="container">
 
     <div class="header">
-        <h1>PPN</h1>
-        <div class="subtitle">Select Subject</div>
+        <h1>Priyadarshini College of Engineering (Diploma), Nagpur</h1>
     </div>
 
     <div class="subject-grid">
