--- a/priyadarshini1/ppn.html
+++ b/priyadarshini1/ppn.html
@@ -125,15 +125,15 @@ body {
 
     <div class="subject-grid">
 
-        <a href="/emerging-trends/emerging-trends.html" class="subject-card">
+        <a href="/priyadarshini1/emerging-trends/emerging-trends.html" class="subject-card">
             <h2>Emerging Trends in CS & IT</h2>
         </a>
 
-        <a href="/python/python.html" class="subject-card">
+        <a href="/priyadarshini1/python/python.html" class="subject-card">
             <h2>Python</h2>
         </a>
 
-        <a href="c/c.html" class="subject-card">
+        <a href="/priyadarshini1/c/c.html" class="subject-card">
             <h2>C Programming</h2>
         </a>
 
