--- a/priyadarshini1/emerging-trends/unit1.html
+++ b/priyadarshini1/emerging-trends/unit1.html
@@ -250,7 +250,7 @@ body {
 
 <div class="top-bar">
     <a href="emerging-trends.html" class="back-button">← Back</a>
-    <h1 class="page-title">Unit 1 - AI & ML Quiz</h1>
+    <h1 class="page-title">Unit 1 - Introduction of AI & ML</h1>
 </div>
 
 <div class="container">
@@ -970,3 +970,4 @@ body {
 
 </body>
 </html>
+
