--- a/priyadarshini1/emerging-trends/emerging-trends.html
+++ b/priyadarshini1/emerging-trends/emerging-trends.html
@@ -106,7 +106,7 @@ footer {
 <body>
 
 <div class="top-bar">
-    <a href="ppn.html" class="back-btn">← Back</a>
+    <a href="/priyadarshini1/ppn.html" class="back-btn">← Back</a>
 </div>
 
 <main>
