--- a/priyadarshini1/ppn.html
+++ b/priyadarshini1/ppn.html
@@ -119,6 +119,12 @@ body {
 
 <div class="container">
 
+<div class="header">
+    <!-- Logo added here -->
+    <img src="/image/Priyadarshini.png" alt="Priyadarshini Logo" style="max-width:120px; margin-bottom:16px; display:block; margin-left:auto; margin-right:auto;">
+    
+    
+
     <div class="header">
         <h1>Priyadarshini College of Engineering (Diploma), Nagpur</h1>
     </div>
