--- a/priyadarshini1/ppn.html
+++ b/priyadarshini1/ppn.html
@@ -121,7 +121,10 @@ body {
 
 <div class="header">
     <!-- Logo added here -->
-    <img src="/image/Priyadarshini.png" alt="Priyadarshini Logo" style="max-width:120px; margin-bottom:16px; display:block; margin-left:auto; margin-right:auto;">
+    <img src="https://kaustubh77rm.github.io/image/Priyadarshini.png" 
+     alt="Priyadarshini Logo" 
+     style="max-width:120px; margin-bottom:16px; display:block; margin-left:auto; margin-right:auto;">
+
     
     
 
