--- a/priyadarshini1/emerging-trends/unit1.html
+++ b/priyadarshini1/emerging-trends/unit1.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -243,6 +244,17 @@ body {
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
+.footer {
+    text-align: center;
+    font-size: 14px;
+    color: var(--muted);
+    margin: 56px 0 24px;
+    padding-top: 20px;
+    border-top: 1px solid rgba(0,0,0,0.1);
+}
+
+
 </style>
 </head>
 
@@ -960,3 +972,5 @@ body {
                 <li>(d) Clustering layers</li>
             </ul>
         </div>
+        
+<div class="footer">© 2026 Kaustubh Ramteke</div>
