--- a/priyadarshini1/emerging-trends/unit1.html
+++ b/priyadarshini1/emerging-trends/unit1.html
@@ -130,7 +130,7 @@ body {
 
 /* Question */
 .question {
-    font-size: 18px;
+    font-size: 22px;
     font-weight: 600;
     margin-bottom: 20px;
     color: var(--text);
@@ -150,7 +150,7 @@ body {
     align-items: center;
     justify-content: center;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 22px;
     flex-shrink: 0;
 }
 
@@ -186,7 +186,8 @@ body {
 
 .options b {
     color: var(--primary);
-    font-weight: 700;
+    font-size:20px;
+    font-weight: 500;
 }
 
 /* Footer */
@@ -268,7 +269,7 @@ body {
 <div class="container">
     <div class="header">
         <h1>Introduction of AI and ML</h1>
-        <div class="subtitle">50 Multiple Choice Questions with Answers</div>
+        
     </div>
 
     <div class="question-grid">
@@ -971,6 +972,7 @@ body {
                 <li>(c) Feedforward only</li>
                 <li>(d) Clustering layers</li>
             </ul>
+        </div>
         </div>
         
 <div class="footer">© 2026 Kaustubh Ramteke</div>
