--- a/priyadarshini1/emerging-trends/unit1.html
+++ b/priyadarshini1/emerging-trends/unit1.html
@@ -688,7 +688,7 @@ body {
             </div>
             <ul class="options">
                 <li>(a) Require minimal data</li>
-                <li><b>(b) Difficult to interpret (black-box)</b></li>
+                <li><b>(b) Difficult to interpret results (black-box)</b></li>
                 <li>(c) Easy to train on CPUs</li>
                 <li>(d) Limited applicability</li>
             </ul>
@@ -976,4 +976,5 @@ body {
         </div>
         
 <div class="footer">© 2026 Kaustubh Ramteke</div>
+
 
