--- a/priyadarshini1/emerging-trends/unit3.html
+++ b/priyadarshini1/emerging-trends/unit3.html
@@ -222,7 +222,7 @@ body {
 
 <div class="top-bar">
     <a href="emerging-trends.html" class="back-button">← Back</a>
-    <h2>Unit 3 – Complete Blockchain Technology MCQs</h2>
+    <h2>Unit 3 – Blockchain Technology</h2>
 </div>
 
     <div class="section">
