--- a/priyadarshini1/ppn.html
+++ b/priyadarshini1/ppn.html
@@ -131,7 +131,7 @@ body {
 
 <div class="header">
     <!-- Logo added here -->
-    <img src="https://kaustubh77rm.github.io/image/Priyadarshini1.png"
+    <img src="https://kaustubh77rm.github.io/image/Priyadarshini.png"
      alt="Priyadarshini Logo"
      class="logo"
      draggable="false"
