--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -116,7 +119,7 @@ h1 {
 .slider {
     display: flex;
     flex-direction: column;
-    animation: slideText 8s infinite;
+    animation: slideText 9s infinite;
 }
 .slider > div {
     height: 3rem;
@@ -144,21 +147,45 @@ h1 {
 .links {
     margin-top: 20px;
 }
+
+/* BETTER APP-STYLE BUTTONS */
 .button-35 {
-    background: #FFD000;
+    background: linear-gradient(135deg, #FFD000, #FFA000);
     border: none;
-    padding: 12px 30px;
-    margin: 10px;
-    font-size: 24px;
-    font-weight: bold;
-    border-radius: 50px;
+    padding: 14px 34px;
+    margin: 12px;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 999px;
     cursor: pointer;
-    transition: 0.3s;
+    color: #222;
+    letter-spacing: 0.5px;
+
+    box-shadow:
+        0 8px 18px rgba(0,0,0,0.35),
+        inset 0 -3px 0 rgba(0,0,0,0.15);
+
+    transition: 
+        transform 0.2s ease,
+        box-shadow 0.2s ease,
+        background 0.3s ease;
 }
-.button-35:hover { 
-    transform: scale(1.1); 
-    background: linear-gradient(45deg,#f9a825,#f57f17); 
+
+/* Hover (mouse) */
+.button-35:hover {
+    transform: translateY(-3px) scale(1.05);
+    background: linear-gradient(135deg,#ffca28,#ff8f00);
+    box-shadow:
+        0 14px 30px rgba(255,193,7,0.55);
 }
+
+/* Tap / Click */
+.button-35:active {
+    transform: scale(0.97);
+    box-shadow:
+        0 5px 12px rgba(0,0,0,0.4) inset;
+}
+
 
 /* VISITOR COUNTER */
 #visitor-count { 
@@ -220,7 +247,13 @@ footer {
     </div>
 
     <!-- Navigation Buttons -->
-    <div class="links">
+    <div class="links" style="
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    gap:10px;
+">
+
         <button class="button-35" onclick="location.href='about.html'">About Me</button>
         <button class="button-35" onclick="location.href='projects.html'">Projects</button>
         <button class="button-35" onclick="location.href='contact.html'">Media</button>
@@ -229,8 +262,6 @@ footer {
         Priyadarshini
     </button>
     </div>
-
-  
 
 
 </main>
