--- a/about.html
+++ b/about.html
@@ -389,7 +389,7 @@ p {
             <div class="sub-item">
                 <button class="sub-header">🐼 Anime & Cartoon <span>▼</span></button>
                 <div class="sub-content">
-                    <p>Detective Conan</p>
+                    <p>Case closed/ Detective Conan</p>
                     <p>Naruto</p>
                     <p>Death Note</p>
                     <p>Monster</p>
@@ -671,3 +671,4 @@ document.querySelectorAll(".folder-header").forEach(btn => {
 
 </body>
 </html>
+
