--- a/contact.html
+++ b/contact.html
@@ -152,6 +152,12 @@ font-size:20px;
             <span>LinkedIn</span>
         </a>
 
+        <!-- Google Maps Card -->
+        <a href="https://www.google.com/maps/contrib/@20.9026747,77.7795364,3112m/data=!3m1!1e3!4m4!8m3!1e3!3m1!1e1?entry=ttu&g_ep=EgoyMDI2MDEyMC4wIKXMDSoKLDEwMDc5MjA3MUgBUAM%3D" target="_blank" class="social-card">
+            <img src="https://raw.githubusercontent.com/kaustubh77rm/kaustubh77rm.github.io/main/image/google-maps.png" alt="Google Maps">
+            <span>Google Maps</span>
+        </a>
+
     </div>
 
     <div class="footer">© 2026 Kaustubh Ramteke</div>
