--- a/priyadarshini1/ppn.html
+++ b/priyadarshini1/ppn.html
@@ -151,6 +151,10 @@ body {
             <h2>Python</h2>
         </a>
 
+        <a href="/priyadarshini1/java/java.html" class="subject-card">
+            <h2>Java</h2>
+        </a>
+        
         <a href="/priyadarshini1/c/c.html" class="subject-card">
             <h2>C</h2>
         </a>
