--- a/priyadarshini1/emerging-trends/unit2.html
+++ b/priyadarshini1/emerging-trends/unit2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -81,7 +82,7 @@ body {
 .header h1 {
     margin: 0;
     font-size: 32px;
-    color: var(--primary);
+    color: #FF5D00;
     font-weight: 800;
     letter-spacing: -0.5px;
 }
@@ -124,7 +125,7 @@ body {
     left: 0;
     width: 6px;
     height: 100%;
-    background: var(--primary);
+    background: #FF5D00;
 }
 
 /* Question */
@@ -139,7 +140,7 @@ body {
 }
 
 .question-number {
-    background: var(--primary);
+    background: #FF5D00;
     color: white;
     width: 40px;
     height: 30px;
@@ -184,7 +185,7 @@ body {
 }
 
 .options b {
-    color: var(--primary);
+    color: #FF5D00;
     font-size:20px;
     font-weight: 500;
 }
