--- a/priyadarshini1/emerging-trends/unit2.html
+++ b/priyadarshini1/emerging-trends/unit2.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -82,7 +83,7 @@ body {
 .header h1 {
     margin: 0;
     font-size: 32px;
-    color: #FF5D00;
+    color: #A30000;
     font-weight: 800;
     letter-spacing: -0.5px;
 }
@@ -125,7 +126,7 @@ body {
     left: 0;
     width: 6px;
     height: 100%;
-    background: #FF5D00;
+    background: #A30000;
 }
 
 /* Question */
@@ -140,7 +141,7 @@ body {
 }
 
 .question-number {
-    background: #FF5D00;
+    background: #A30000;
     color: white;
     width: 40px;
     height: 30px;
@@ -185,7 +186,7 @@ body {
 }
 
 .options b {
-    color: #FF5D00;
+    color: #A30000;
     font-size:20px;
     font-weight: 500;
 }
