--- a/priyadarshini1/emerging-trends/unit3.html
+++ b/priyadarshini1/emerging-trends/unit3.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -86,12 +87,12 @@ body {
 }
 
 .section-title {
-    color: var(--secondary);
+    color: #5D006E;
     font-size: 24px;
     margin-top: 0;
     margin-bottom: 25px;
     padding-bottom: 10px;
-    border-bottom: 2px solid var(--primary);
+    border-bottom: 2px solid #5D006E;
 }
 
 .question-grid {
@@ -105,7 +106,7 @@ body {
     padding: 22px;
     border-radius: 16px;
     box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-    border-left: 6px solid var(--primary);
+    border-left: 6px solid #5D006E;
     transition: transform 0.3s ease;
 }
 
@@ -123,7 +124,7 @@ body {
 }
 
 .question-number {
-    background: var(--primary);
+    background: #5D006E;
     color: white;
     padding: 6px 14px;
     border-radius: 8px;
@@ -148,13 +149,13 @@ body {
 }
 
 .correct {
-    color: var(--primary);
+    color: #5D006E;
     font-weight: bold;
+    font-size:20px;
     position: relative;
 }
 
 .correct::before {
-    content: "✓";
     color: var(--primary);
     font-weight: bold;
     margin-right: 8px;
@@ -221,12 +222,12 @@ body {
 <body>
 
 <div class="top-bar">
-    <a href="emerging-trends.html" class="back-button">← Back</a>
+    
     <h2>Unit 3 – Blockchain Technology</h2>
 </div>
 
     <div class="section">
-        <h2 class="section-title">Basics of Blockchain Technology</h2>
+        <h2 class="section-title">Blockchain Technology</h2>
         <div class="question-grid">
             
             <div class="question-card">
@@ -914,64 +915,7 @@ body {
                 </ul>
             </div>
 
-        </div>
-    </div>
 
-    <div class="answer-key">
-        <h3>Complete Answer Key</h3>
-        <div class="answer-grid">
-            <div class="answer-item">1. (b)</div>
-            <div class="answer-item">2. (b)</div>
-            <div class="answer-item">3. (b)</div>
-            <div class="answer-item">4. (b)</div>
-            <div class="answer-item">5. (b)</div>
-            <div class="answer-item">6. (b)</div>
-            <div class="answer-item">7. (b)</div>
-            <div class="answer-item">8. (b)</div>
-            <div class="answer-item">9. (a)</div>
-            <div class="answer-item">10. (a)</div>
-            <div class="answer-item">11. (c)</div>
-            <div class="answer-item">12. (b)</div>
-            <div class="answer-item">13. (b)</div>
-            <div class="answer-item">14. (b)</div>
-            <div class="answer-item">15. (b)</div>
-            <div class="answer-item">16. (b)</div>
-            <div class="answer-item">17. (b)</div>
-            <div class="answer-item">18. (b)</div>
-            <div class="answer-item">19. (b)</div>
-            <div class="answer-item">20. (a)</div>
-            <div class="answer-item">21. (b)</div>
-            <div class="answer-item">22. (b)</div>
-            <div class="answer-item">23. (b)</div>
-            <div class="answer-item">24. (a)</div>
-            <div class="answer-item">25. (b)</div>
-            <div class="answer-item">26. (a)</div>
-            <div class="answer-item">27. (b)</div>
-            <div class="answer-item">28. (b)</div>
-            <div class="answer-item">29. (a)</div>
-            <div class="answer-item">30. (b)</div>
-            <div class="answer-item">31. (b)</div>
-            <div class="answer-item">32. (a)</div>
-            <div class="answer-item">33. (a)</div>
-            <div class="answer-item">34. (b)</div>
-            <div class="answer-item">35. (b)</div>
-            <div class="answer-item">36. (a)</div>
-            <div class="answer-item">37. (b)</div>
-            <div class="answer-item">38. (b)</div>
-            <div class="answer-item">39. (a)</div>
-            <div class="answer-item">40. (b)</div>
-            <div class="answer-item">41. (b)</div>
-            <div class="answer-item">42. (a)</div>
-            <div class="answer-item">43. (a)</div>
-            <div class="answer-item">44. (b)</div>
-            <div class="answer-item">45. (a)</div>
-            <div class="answer-item">46. (d)</div>
-            <div class="answer-item">47. (a)</div>
-            <div class="answer-item">48. (c)</div>
-            <div class="answer-item">49. (a)</div>
-            <div class="answer-item">50. (b)</div>
-        </div>
-    </div>
 
     <div class="footer">
         <p>© 2026 Kaustubh Ramteke</p>
