--- a/priyadarshini1/emerging-trends/unit3.html
+++ b/priyadarshini1/emerging-trends/unit3.html
@@ -1,5 +1,3 @@
-
-<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -915,13 +913,13 @@ body {
                 </ul>
             </div>
 
-
+        </div> <!-- Closes the last .section -->
 
     <div class="footer">
         <p>© 2026 Kaustubh Ramteke</p>
-        <p>Based on study material from Nirali Prakashan</p>
+        <p>Based on study material from nirali prakashan</p>
     </div>
-</div>
+</div> <!-- Closes .container -->
 
 </body>
 </html>
