--- a/priyadarshini1/emerging-trends/unit4.html
+++ b/priyadarshini1/emerging-trends/unit4.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,7 +55,7 @@ body {
 .header h1 {
     margin: 0;
     font-size: 32px;
-    color: var(--primary);
+    color: #FFB700;
     font-weight: 800;
     letter-spacing: -0.5px;
 }
@@ -95,7 +96,7 @@ body {
     left: 0;
     width: 6px;
     height: 100%;
-    background: var(--primary);
+    background: #FFB700;
 }
 
 .question {
@@ -109,7 +110,7 @@ body {
 }
 
 .question-number {
-    background: var(--primary);
+    background: #FFB700;
     color: white;
     width: 30px;
     height: 30px;
@@ -146,8 +147,8 @@ body {
 }
 
 .options b {
-    color: var(--primary);
-    font-size:20px;
+    color: #FFB700;
+    font-size:22px;
     font-weight: 500;
 }
 
