--- a/priyadarshini1/python/python.html
+++ b/priyadarshini1/python/python.html
@@ -109,11 +109,11 @@ footer {
 <main>
     <div class="card">
         <h1>Python</h1>
-        <div class="subtitle">This page contain syllabus & notes of python programming</div>
-
+       
         <!-- Single Syllabus Button -->
         <a href="python_syllabus.html" class="syllabus-btn">Syllabus</a>
-
+        <br>
+        <a href="python_notes.html" class="syllabus-btn">Notes</a>
         
     </div>
 </main>
