--- a/priyadarshini1/emerging-trends/unit2.html
+++ b/priyadarshini1/emerging-trends/unit2.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -255,13 +256,29 @@ body {
     padding-top: 20px;
     border-top: 1px solid rgba(0,0,0,0.1);
 }
+.copyright-below {
+            text-align: center;
+            color: var(--muted);
+            font-weight: 500;
+            padding-top: 8px;
+            border-top: 1px solid var(--border);
+            margin-top: 8px;
+            font-size: 14px;
+        }
 </style>
 </head>
 
 <body>
 
 <div class="top-bar">
-    <h1 class="page-title">Unit 2 - Internet of Things (IoT)</h1>
+    <div class="top-bar-content">
+        <div class="top-bar-title">
+            <h2 style="margin: 0;">Unit 2 – Internet of Things (IoT)</h2>
+        </div>
+        <div class="copyright-below">
+            © Kaustubh Ramteke
+        </div>
+    </div>
 </div>
 
 <div class="container">
